@@ -1,11 +1,11 @@
 % Generated by roxygen2: do not edit by hand
 % Please edit documentation in R/report_subjectProfileCombine.R
-\name{getXLimSubjectProfilePlots}
-\alias{getXLimSubjectProfilePlots}
+\name{getTimeLimSubjectProfilePlots}
+\alias{getTimeLimSubjectProfilePlots}
 \title{Get the limits to set for the subject profile plots,
 depending on the alignment policy set.}
 \usage{
-getXLimSubjectProfilePlots(
+getTimeLimSubjectProfilePlots(
   listPlots,
   timeAlign = "all",
   timeAlignPerSubject = "none"
